General     : Remove internal clapack library code. Set only an optional and external dependency to eigen3.
General     : New tool to auto-crop image based on black hole borders detection.

BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):

001 ==> 315098 - DNG Converter and DigiKam crashes when opening a .dng file.
002 ==> 316556 - DIGIKAMSC_USE_PRIVATE_KDEGRAPHICS is set to ON.
003 ==> 308418 - Some keyboard shortcuts not working in full screen mode.
004 ==> 312549 - Showfoto does not correctly rotate images in the main view.
005 ==> 316752 - Make the forward, back, first & last arrows cycle properly.
006 ==> 311295 - digiKam not detecting my OLYMPUS M.14-42mm F3.5-5.6 II R lens.
007 ==> 313938 - Workflow doesn't save/restore tool parameters.
008 ==> 251563 - Getting rid of the lapack dependancy using Eigen [patch].
009 ==> 310477 - Correct Camera identified - Canon PowerShot A470 but drop-down list shows A740 option.
010 ==> 316790 - While showing support of NIKON 800 on starting page, in import, one cannot choose thois model.
011 ==> 311393 - Cannot import photos from autodetected Canon PowerShot A1300 [patch].
012 ==> 317714 - Consider working on NFS shares a legitimate use case (even for the targeted home environment).
013 ==> 267436 - Automatic lens correction : add auto-crop feature to remove black borders.
014 ==> 204135 - JPEG lossless cropping support.
015 ==> 317745 - Store metadata incl. geolocation data into CR2 files.
016 ==> 295423 - External libclapack not used [patch].
017 ==> 179209 - Batch resize only to album not to any directory [patch].
018 ==> 318067 - Dead link on contribution page.
019 ==> 318200 - Toolbar nearly unusable after upgrading to digiKam 3.10.
020 ==> 318154 - digiKam crashes after a few seconds.
021 ==> 318353 - Implement kind of a read-only mode.
022 ==> 166820 - Wish: Specify a ISO over which to apply noise reduction.
023 ==> 
